vvvv/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vvvv
  labels:
    app: vvvv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vvvv
  template:
    metadata:
      labels:
        app: vvvv
    spec:
      containers:
      - name: vvvv
        image: kind-game:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 443
        readinessProbe:
          httpGet: {path: /api/state, port: 443}
        livenessProbe:
          httpGet: {path: /api/state, port: 443}
