vvvv/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vvvv
  labels:
    app: vvvv
spec:
  selector:
    app: vvvv
  ports:
  - port: 443
    targetPort: 443
  type: ClusterIP
