vvvv/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vvvv
spec:
  podSelector:
    matchLabels:
      app: vvvv
  policyTypes:
    - Ingress
    - Egress
